# doligcc

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  install.sh
.docker/images/linux_gcc/: Dockerfile  docker-autobash-entrypoint.sh  importdata.sh
.docker/linux_gcc/: Dockerfile
project/: .gitignore  CMakeLists.txt  comp.sh
project/lib/: README.md
